--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -53,13 +53,13 @@
           <h3 class="product__title">A really nice shoe</h3>
           <p class="product__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quam
             perspiciatis facilis beatae laudantium quidem enim sit sequi!</p>
-          <a href="" class="btn">Buy now</a>
+          <a href="" class="btn spacing ">Buy now</a>
         </article>
 
         <article class="product shoe-white shoe-left spacing">
           <img src="img/shoe-2.png" alt="" class="product__image">
           <h3 class="product__title">A really nice shoe</h3>
-          <p class="product__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quam
+          <p class="product__description spacing spacing">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quam
             perspiciatis facilis beatae laudantium quidem enim sit sequi!</p>
           <a href="" class="btn">Buy now</a>
         </article>
